# func-checker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  index.html  jonah.toml  script.py
elm/: elm.json  index.html
elm/elm-stuff/0.19.1/: Main.elmi  Main.elmo
elm/src/: Main.elm  Model.elm  Subscribe.elm  Update.elm  View.elm
rust/: Cargo.toml
rust/src/: latex.rs  lexer.rs  lib.rs
src/: lib.rs  main.rs
src/components/: input_func.rs  mod.rs
src/logic/: mod.rs
src/pages/: mod.rs  table_gen.rs
web/: index.html  script.js  style.css
