[package]
name = "my-website"
version = "0.1.0"
edition = "2021"
description = "my github.io page"
readme = "README.md"
repository = "https://github.com/eeli1/eeli1.github.io"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.18"
bool-algebra = { git = "https://github.com/eeli1/bool-algebra", version = "0.1.0" }
wasm-logger = "0.2.0"
log = "0.4.6"

[dev-dependencies]
wasm-bindgen-test = "0.2"