[package]
name = "func-checker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bool-algebra = { git = "https://github.com/elias-2001-de/bool-algebra", version = "0.1.0" }
wasm-bindgen = "0.2.63"
js-sys = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"